[package]
name = "riichi_hand"
version = "0.6.0"
authors = ["Mateusz Maćkowski <mateusz@mackowski.org>"]
edition = "2018"
license = "MIT"
description = "A collection of utilities for working with Riichi Mahjong player hands"
homepage = "https://github.com/m4tx/riichi-hand-rs"
repository = "https://github.com/m4tx/riichi-hand-rs"
documentation = "https://docs.rs/riichi_hand"
readme = "README.md"
categories = ["game-engines", "parser-implementations", "rendering"]
keywords = ["riichi", "mahjong", "renderer"]
exclude = [
    ".github",
    ".gitignore",
    "examples/"
]
rust-version = "1.65.0"

[dependencies]
image = { version = "0.24.6", default-features = false, optional = true }
lazy_static = { version = "1.4.0", optional = true }
num-traits = "0.2.15"

[build-dependencies]
image = { version = "0.24.6", default-features = false, optional = true }
rayon = { version = "1.7.0", optional = true }
resvg = { version = "0.35.0", optional = true }
tiny-skia = { version = "0.11.2", optional = true }
usvg = { version = "0.35.0", optional = true }

[dev-dependencies]
csv = "1.2.2"
serde = { version = "1.0.164", features = ["derive"] }
num-bigint = "0.4.3"

[features]
default = ["raster-renderer", "fluffy-stuff-tile-sets", "martin-persson-tile-sets"]
raster-renderer = ["image"]
fluffy-stuff-tile-sets = ["image/png", "rayon", "resvg", "tiny-skia", "usvg", "lazy_static"]
martin-persson-tile-sets = ["image/png", "lazy_static"]
